Do not allow to perform any actions except "Cross module query","Manage issue types" and "Approve/Reject user submission" if there are no issue types associated with the current module.
*src/java/org/tigris/scarab/screens/Default.java -
 #getTargetForNoIssueTypes():
 New method to return value of the property "template.[screen].noIssueTypesForwardsTo" if it is specified in Scarab.properties
 #doBuildTemplate()-Added condition to redirect to the alternate screen specified, if there are no issue types in the current module.

*src/conf/Scarab.properties -
 Added new resources for templates require issue types in the current module.

*src/i18n/ScarabBundle_en_US.properties -
 Added new resource "EnterNewIssueType"

*src/java/org/tigris/scarab/screens/entry/Wizard1.java -
 #getTitle():Removed unnecessary creation of String object.

*src/templates/navigations/CommonLinks.vm
*src/templates/screens/entry/Wizard3.vm -
 l10n.EnterNew replaced with $l10n.format("EnterNewIssueType", "value") to comply with the change made to "EnterNewIssueType" in resource bundle.

*src/templates/macros/MITListMacro.vm -
 Do not include current module's issue type if it's just been removed, in the cross module query tab.

*src/java/org/tigris/scarab/actions/Search.java -
 #doSavequery(): After saving a query, redirect to the cross module query page if the current issue type is null.

*src/java/org/tigris/scarab/actions/SelectIssueType.java -
 #doSelect():Check if the current issue type is still globally available. It is possible that it was globally removed
 before the user clicks that issue type in the "Enter new" tab.

*src/java/org/tigris/scarab/pipeline/FreshenUserValve.java -
 #setCurrentIssueType(): check that the current issue type is not deleted globally.

Issue        : PCN20782
Submitted by : Arun
Reviewed by  : Venkat, Dlr

--- a/src/templates/macros/MITListMacro.vm
+++ b/src/templates/macros/MITListMacro.vm
@@ -68,7 +68,8 @@ $l10n.NoIssueTypeSelected
     <th>$l10n.Description</th>
   </tr>
  #foreach ($item in $mitList.MITListItems)
-  #indexedRows($velocityCount)
+  #if (!$item.IssueType.Deleted)
+   #indexedRows($velocityCount)
     <td>
     <input type="checkbox" name="mitlistitem" value="$item.QueryKey" />
     </td>
@@ -77,18 +78,19 @@ $l10n.NoIssueTypeSelected
     #set ($issuecount = $item.getIssueCount($data.User))
     <td>#if ($issuecount >= 0)$issuecount #else $l10n.Unavailable #end</td>
     <td>$item.IssueType.Description</td>
-  </tr>        
+   </tr>
+  #end
  #end
-</table>  
+</table>
 #end
 
 #if ($mitList && !$mitList.isEmpty())
  <div class="functnbar3">
  #if (!$isEdit)
-  <input type="submit" name="eventSubmit_doStartover" 
+  <input type="submit" name="eventSubmit_doStartover"
      value="$l10n.RemoveAll" />&nbsp;
  #end
-  <input type="submit" name="eventSubmit_doRemoveitemsfromlist" 
+  <input type="submit" name="eventSubmit_doRemoveitemsfromlist"
      value="$l10n.RemoveSelected" />&nbsp;
   <input type="submit" name="eventSubmit_doGotosavelist" value="$l10n.Save" />
  </div>
@@ -119,7 +121,7 @@ $l10n.NoIssueTypeSelected
        <option value="module" #if($searchField.equals("module")) selected="selected"#end>$l10n.Module</option>
        <option value="issuetype" #if($searchField.equals("issuetype")) selected="selected"#end>$l10n.IssueType</option>
      </select>&nbsp;
-     <input type="submit" name="eventSubmit_doRefresh" 
+     <input type="submit" name="eventSubmit_doRefresh"
        value="$l10n.Filter" />
    </td>
   </tr>
@@ -163,13 +165,14 @@ $l10n.NoMoreIssueTypes
     </tr>
 
 #foreach ($rmit in $searchableRMITs)
+ #if (!$rmit.IssueType.Deleted)
   #indexedRows($velocityCount)
     <td>
      <input type="checkbox" name="rmitid" value="$rmit.QueryKey" />
     </td>
     <td>$rmit.Module.Name</td>
     <td>
-        #set ($issueTypeName = $rmit.IssueType.Name)  
+        #set ($issueTypeName = $rmit.IssueType.Name)
         #set ($issueTypeDisplay = $rmit.DisplayName)
         ##if (!$issueTypeDisplay.toString().equals($issueTypeName.toString()))
         #if (!$issueTypeDisplay.equals($issueTypeName))
@@ -180,10 +183,11 @@ $l10n.NoMoreIssueTypes
    </td>
     <td>$rmit.DisplayDescription</td>
   </tr>
+ #end
 #end
-</table>  
+</table>
 </div>
-#end      
+#end
 
 #if ($isAddPagination)
   #paginateXModuleList($screenTemplate)
