--- a/src/templates/navigations/CommonLinks.vm
+++ b/src/templates/navigations/CommonLinks.vm
@@ -2,7 +2,7 @@
   #set ($module = $scarabR.CurrentModule)
   #if ($module.allowsNewIssues())
     #set ($rmit = $data.User.CurrentRModuleIssueType)
-    <div>$link.setPage("$scarabR.NextEntryTemplate").setLabel("$l10n.EnterNew: $rmit.DisplayName.toLowerCase()")</div>
+    <div>$link.setPage("$scarabR.NextEntryTemplate").setLabel("$l10n.format('EnterNewIssueType', $rmit.DisplayName.toLowerCase())")</div>
   #end
   #if (!$module.isGlobalModule())
     <div>$link.setPage("QueryList.vm").setLabel("$l10n.Queries")</div>
