*TemplateList.vm: add link for availability field, to enter issue screen. * ViewIssueLong.vm: eliminate extra #for loop. Issue number:  15993 Submitted by:  elicia

--- a/src/templates/screens/TemplateList.vm
+++ b/src/templates/screens/TemplateList.vm
@@ -87,9 +87,9 @@ $l10n.NoTemplates
   </td>
   <td>
   #if (!$template.Approved)
-    $l10n.Personal ($l10n.UntilApproved)
+    <a href="$link.setPathInfo("templateId", "$template.IssueId").setPage($scarabR.NextEntryTemplate)">$l10n.Personal ($l10n.UntilApproved)</a>
   #else
-    $template.Scope.Name
+    <a href="$link.setPathInfo("templateId", "$template.IssueId").setPage($scarabR.NextEntryTemplate)">$template.Scope.Name</a>
   #end
   </td>
    <td>
