Issue number: 21211 - Fatal error when creating new query , after editing build cross query Modified files: * src/java/org/tigris/scarab/actions/QueryList.java - removed doNewQuery   method as it is no longer used anywhere * src/templates/screens/QueryList.vm - switched 'Create new query' button   to use doGotoadvancedquery as other two cases of the button.  One in this   template and the other in SaveQuery.vm.  doGotoadvancedquery removes stale   data before redirecting.

--- a/src/templates/screens/QueryList.vm
+++ b/src/templates/screens/QueryList.vm
@@ -106,7 +106,7 @@ $l10n.Click
   #if ($canDeleteAtLeastOne)
    &#160;<input type="submit" value="$l10n.DeleteSelected" name="eventSubmit_doDeletequeries" />
   #end
-   &#160;<input type="submit" value="$l10n.CreateNewQuery" name="eventSubmit_doNewquery" />
+   &#160;<input type="submit" value="$l10n.CreateNewQuery" name="eventSubmit_doGotoadvancedquery" />
 </div>
 
 #end
