Instead of using the ScarabRequestTool method getAdjustedPageNum to adjust the page numbers after changing the number of results per page,  use algorthym to adjust the page number to the one now containing the first user on the current page, if it has changed.
* GlobalMacros.vm: userList(): when refreshing results per page, call new method doRefreshResultsPerPage().
* ManageUser.java: doSearch():  no longer using AdjustedPageNum
* RequireLoginFirstAction.java, ScarabTemplateAction.java:  doRefreshResultsPerPage(): add method to recalculate page number and reset number of results per page.
* IssueList.vm, TemplateList.vm, MoveIssue.vm,  QueryList.vm,  ManageArtifactTypes.vm, GlobalUserAttributes.vm, GlobalAttributeShow.vm, GlobalArtifactTypeShow.vm: do not use getAdjustedPageNum.
Issue number:  20917

--- a/src/templates/screens/IssueList.vm
+++ b/src/templates/screens/IssueList.vm
@@ -11,7 +11,7 @@
 
 ## if results exceed limit, get subset list
 #set ($resultsPerPage = $data.Parameters.getInt("resultsPerPage",25))
-#set ($pageNum = $scarabR.AdjustedPageNum)
+#set ($pageNum = $data.Parameters.getInt("pageNum",1))
 #if ($resultsPerPage > 0 && $issueListSize > $resultsPerPage)
  #set ($paginated = "true")
  #set ($queryResults = $scarabR.getPaginatedList($queryResults, $pageNum, $resultsPerPage))
