--- a/src/templates/macros/GlobalMacros.vm
+++ b/src/templates/macros/GlobalMacros.vm
@@ -382,7 +382,7 @@
   #set ($resultsPerPage = 25)
 #end
 #foreach ($num in [25, 50, 75, 100])
- <input type="radio" value="$num" name="resultsPerPage" #if ($resultsPerPage == $num) checked="checked" #end /> $num
+ <input type="radio" value="$num" name="newResultsPerPage" #if ($resultsPerPage == $num) checked="checked" #end /> $num
 #end
 #if ($showAll.toString().equals("true"))
  <input type="radio" value="-1" name="resultsPerPage" #if ($resultsPerPage == -1) checked="checked" #end /> $l10n.All
@@ -667,7 +667,7 @@ selected the radio button.
 ## PAGINATION
 ## if results exceed limit, get subset list
 #set ($resultsPerPage = $data.Parameters.getInt("resultsPerPage", 25))
-#set ($pageNum = $scarabR.AdjustedPageNum)
+#set ($pageNum = $data.Parameters.getInt("pageNum", 1))
 
 ## USER SEARCH
 <h3><a name="add">$l10n.Users</a></h3> 
@@ -747,7 +747,7 @@ selected the radio button.
        <th>$l10n.MaxPerPage</th>
        <td>
            #resultsPerPageRadioSelect($resultsPerPage false)
-           &#160;<input type="submit"  name="eventSubmit_doRefresh" value="$l10n.Refresh" />
+           &#160;<input type="submit"  name="eventSubmit_doRefreshresultsperpage" value="$l10n.Refresh" />
            <input type="hidden" name="oldResultsPerPage" value="$resultsPerPage" />
        </td>
      </tr>
