--- a/src/templates/screens/admin/GlobalAttributeShow.vm
+++ b/src/templates/screens/admin/GlobalAttributeShow.vm
@@ -27,7 +27,7 @@
 ## PAGINATION
 ## if results exceed limit, get subset list
 #set ($resultsPerPage = $data.Parameters.getInt("resultsPerPage", 25))
-#set ($pageNum = $scarabR.AdjustedPageNum)
+#set ($pageNum = $data.Parameters.getInt("pageNum",1))
 #if ($resultsPerPage > 0 && $attributes.size() > $resultsPerPage)
  #set ($paginated = "true")
  #set ($pagList = $scarabR.getPaginatedList($attributes, $pageNum, $resultsPerPage))
