* IssueType.java: add method getParentIssueType() to get an template issue type's parent. * GlobalMacros.vm: attrValueLeafSelect(): if this is a template, use parent issue type to get module/issuetype-specific information like display value for attribute options. Issue number:  19890

--- a/src/templates/macros/GlobalMacros.vm
+++ b/src/templates/macros/GlobalMacros.vm
@@ -4,6 +4,9 @@
   #set ($attr = $attrValue.Attribute)
   #set ($module = $attrValue.Issue.Module)
   #set ($issueType = $attrValue.Issue.IssueType)
+  #if ($issueType.ParentId > 0)
+     #set ($issueType = $issueType.ParentIssueType)
+  #end
   ## Initialize $newValues in case the second #set has a null RHS.
   #set ($newValues = '')
   #set ($newValues = $attrInput.get($optionFieldName).Value)
