* IssueType.java: change get getParentIssueType() to getIssueTypeForTemplateType() to make it more intuitive of a name.  Call superclass method. * GlobalMacros.vm: call new getIssueTypeForTemplateType() method. Issue number:  19890

--- a/src/templates/macros/GlobalMacros.vm
+++ b/src/templates/macros/GlobalMacros.vm
@@ -5,7 +5,7 @@
   #set ($module = $attrValue.Issue.Module)
   #set ($issueType = $attrValue.Issue.IssueType)
   #if ($issueType.ParentId > 0)
-     #set ($issueType = $issueType.ParentIssueType)
+     #set ($issueType = $issueType.IssueTypeForTemplateType)
   #end
   ## Initialize $newValues in case the second #set has a null RHS.
   #set ($newValues = '')
