--- a/src/templates/screens/admin/ArtifactTypeEdit.vm
+++ b/src/templates/screens/admin/ArtifactTypeEdit.vm
@@ -1,4 +1,3 @@
-#set ($rmit = "")
 #set ($module = $scarabR.CurrentModule)
 #set ($issueType = $scarabR.IssueType)
 #set ($issueTypeId = $data.Parameters.getString("issueTypeId",""))
@@ -16,7 +15,7 @@
 $link.setPage("admin,ManageArtifactTypes.vm").setLabel("$l10n.Here").
 </em></p>
 
-#elseif ($rmit.length() == 0)
+#elseif (!$rmit || !$rmit.IssueTypeId)
 <p class="infomark"><em>$l10n.IssueTypeRemovedFromModuleAndProceed
 $link.setPage("admin,ManageArtifactTypes.vm").setLabel("$l10n.Here").
 </em></p>
