--- a/documentation/manual/look-and-feel.css
+++ b/documentation/manual/look-and-feel.css
@@ -1,13 +1,7 @@
-/******************************************************************************
+/** $Id: look-and-feel.css,v 1.3 2003/08/16 10:41:10 linus Exp $
 *******************************************************************************
 
 Style sheet for the ArgoUML manual
-
-Modifications:
-==============
-
-13 Dec 2001:  Jeremy Bennett. First version, based on the cookbook, but
-              without the developer colouring!
 
 *******************************************************************************
 ******************************************************************************/
