Issue number: 15691 - remove current issue type concept. This commit is a checkin of somewhat independent piece of that larger change. Modified Files: * src/java/org/tigris/scarab/actions/ModifyIssue.javaa - replaced several   cases of getIssue(false) with getIssue().  The latter method is equivalent   to the former. * src/java/org/tigris/scarab/tools/ScarabRequestTool.java -   getUserByUserName:   explicitly use the domain of the current module as that is what was happening   by calling getIssue()   getIssue() changed from returning a new issue if no id was specified to   expecting an id.  getIssue(true) is then removed and getIssue(false) is   replaced by getIssue().  the only uses of getIssue(true) had better   alternatives. * src/templates/macros/GlobalMacros.vm - use the issue that is being   edited when determining workflow instead of a new, unrelated issue.

--- a/src/templates/macros/GlobalMacros.vm
+++ b/src/templates/macros/GlobalMacros.vm
@@ -2,8 +2,9 @@
 #macro (attrValueLeafSelect $attrValue $optionFieldName $size $multiple)
   #set ($attrInput = $intake.AttributeValue.mapTo($attrValue))
   #set ($attr = $attrValue.Attribute)
-  #set ($module = $attrValue.Issue.Module)
-  #set ($issueType = $attrValue.Issue.IssueType)
+  #set ($issue = $attrValue.Issue)
+  #set ($module = $issue.Module)
+  #set ($issueType = $issue.IssueType)
   #if ($issueType.ParentId > 0)
      #set ($issueType = $issueType.IssueTypeForTemplateType)
   #end
@@ -33,13 +34,13 @@
          #else
            #set ($values = $newValues)
          #end
-         #set ($canMakeTransition = $scarabG.Workflow.canMakeTransition($data.User, $scarabR.getAttributeOption($values), $option.getAttributeOption(), $scarabR.Issue))
+         #set ($canMakeTransition = $scarabG.Workflow.canMakeTransition($data.User, $scarabR.getAttributeOption($values), $option.getAttributeOption(), $issue))
          #if ($newValues.equals($option.OptionId))
            #set ($selected=true)
           #end
        #end
     #else
-         #set ($canMakeTransition = $scarabG.Workflow.canMakeTransition($data.User, $scarabR.getAttributeOption("0"), $option.getAttributeOption(), $scarabR.Issue))
+         #set ($canMakeTransition = $scarabG.Workflow.canMakeTransition($data.User, $scarabR.getAttributeOption("0"), $option.getAttributeOption(), $issue))
     #end
     #if ($canMakeTransition)
     <option value="$option.OptionId"#selected($selected)>
